--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 body{
 	margin:0;
+	font-family:sans-serif;
+}
+
+a{
+	color:#000;
+	text-decoration:none;
+	font-size:2em;
 }
 
 .page{
@@ -19,6 +26,7 @@ body{
 .page-title{
 	text-align:center;
 	text-transform:uppercase;
+	font-size:3em;
 }
 
 .toolbox{
@@ -30,7 +38,7 @@ body{
 }
 
 .toolbox-tool{
-	height:10em;
+	height:5em;
 }
 
 #brainwriting{
@@ -43,4 +51,25 @@ body{
 	background-repeat:no-repeat;
 	background-position:center;
 	background-size:100%;
+}
+
+.tut-img{
+	width:100%;
+	height:20em;
+	background-image:url("../img/mind-map.jpg");
+	background-repeat:no-repeat;
+	background-position:center;
+	background-size:100%;
+}
+
+.left-arrow{
+	text-align:left;
+	width:20px;
+	font-size:5em;
+}
+
+.right-arrow{
+	text-align:right;
+	font-size:3em;
+	margin-top:-1em;
 }
