--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
 	margin:0;
-	font-family:sans-serif;
+	font-family:Roboto,Helvetica,sans-serif;
 }
 
 a{
@@ -11,26 +11,51 @@ a{
 
 .page{
 	width:100%;
-	height:100%;
-}
-
-#toolbox-page{
-	background:#66ccff;
-}
-
-#tut-page{
-	background:#d7c163;
-	display:none;
+	height:90%;
+	margin-top:-1em;
 }
 
 .page-title{
 	text-align:center;
 	text-transform:uppercase;
-	font-size:3em;
+	font-size:2.5em;
+}
+
+.page-content{
+	margin-top:-1.5em;
+}
+
+.picture{
+	border:2px solid #000;
+}
+
+/* Toolbar */
+
+#menu-bar{
+	padding:0;
+	margin:0;
+	border-bottom:2px solid black;
+	width:100%;
+	height:5%;
+	text-align:center;
+}
+
+#app-name{
+	text-transform:uppercase;
+	margin:0.5em;
+	text-align:left;
+	/*font-style:italic;*/
+}
+
+/* CSS for Toolbox Page */
+
+#toolbox-page{
+	background:#fff;
 }
 
 .toolbox{
 	padding:0;
+	font-size:1.5em;
 	text-align:center;
 	width:100%;
 	list-style-type:none;
@@ -38,7 +63,25 @@ a{
 }
 
 .toolbox-tool{
-	height:5em;
+	position:relative;
+	margin-top:-1.1em;
+	height:25vh;
+}
+
+.tool-options{
+	position:absolute;
+	right:0.5em;
+	bottom:0.5em;
+}
+
+.tool-button{
+	background:#fff;
+	border:2px solid #000;
+	font-size:.3em;
+	border-radius:0.5em;
+	width:4em;
+	padding:0.5em;
+	display:inline;
 }
 
 #brainwriting{
@@ -53,23 +96,36 @@ a{
 	background-size:100%;
 }
 
+/* CSS for Tutorial Pages */
+#tut-page{
+	background:#fff;
+	display:none;
+}
+
 .tut-img{
 	width:100%;
-	height:20em;
+	height:50vh;
+	padding:0;
 	background-image:url("../img/mind-map.jpg");
 	background-repeat:no-repeat;
 	background-position:center;
 	background-size:100%;
 }
 
-.left-arrow{
-	text-align:left;
-	width:20px;
-	font-size:5em;
+.tut-description{
+	padding: 0em 1em 1em 1em;
 }
 
-.right-arrow{
-	text-align:right;
-	font-size:3em;
-	margin-top:-1em;
+#next-prev{
+	width:100%;
+	height:2em;
+}
+
+.arrow{
+	font-size:3.5em;
+	display:inline;
+}
+
+.left-arrow{
+	
 }
